Always add bookmarks to the mobile node on Android

bookmark_utils should always attach new bookmarks to the mobile
node on Android, rather than the most recently used one.
This is where the bookmark button already appends them to, and
it will make sure all added bookmarks are visible.

BUG=649420

Review-Url: https://codereview.chromium.org/2367533003
Cr-Commit-Position: refs/heads/master@{#424751}

Former-commit-id: c4a5b95f057d9b29ee066225b43c89557b5c2691